<?xml version="1.0"?>
<package format="2">
  <name>mav_hilbert_planner</name>
  <version>0.0.0</version>
  <description>
    Local planning using, LOCO in hilbert maps, and cooking you dinner.
  </description>

  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>mav_msgs</depend>
  <depend>mav_path_smoothing</depend>
  <depend>mav_planning_common</depend>
  <depend>mav_planning_msgs</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>hilbert_loco_planner</depend>
  <depend>hilbert_mapper</depend>
  <depend>voxblox_ros</depend>
</package>
